<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_item_new"
        android:title="@string/menu_item_new"
        android:icon="@drawable/add_alarm"
        appcompat:showAsAction="always|withText">
    </item>
    <item
        android:id="@+id/menu_item_save"
        android:title="@string/menu_item_save"
        android:icon="@drawable/save_alarm"
        appcompat:showAsAction="always|withText">
    </item>
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/delete_alarm"
        appcompat:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_item_rate"
        android:title="@string/menu_item_rate"
        android:icon="@drawable/glyphicons_049_star">
    </item>
    <item
        android:id="@+id/menu_item_website"
        android:icon="@drawable/glyphicons_340_globe"
        android:title="@string/menu_item_website">
    </item>
    <item
        android:id="@+id/menu_item_report"
        android:title="@string/menu_item_report"
        android:icon="@drawable/glyphicons_340_globe">
    </item>
</menu>